# google-search-mcp

./: README.md  pyproject.toml
google_search_mcp/: __init__.py
