[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-search-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that utilizes Google Custom Search (CSE) to retrieve information from the internet"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shogo Okamoto" }
]
keywords = ["mcp", "google", "search", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
google-search-mcp = "google_search_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["google_search_mcp"]
